--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 	      google.load("jqueryui", "1.8.6");
     </script>
 
-	 <script type="text/javascript" src="jscolor.js"></script>
+	 <script type="text/javascript" src="js/jscolor.js"></script>
      <script type="text/javascript">
     	var input_circles = false    </script>
 
-	 <script type="text/javascript" src="circle.js"></script>
+	 <script type="text/javascript" src="js/circle.js"></script>
 
 
 </head>
