Added string constant file, file type check, fullscreen support of map

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	      google.load("jqueryui", "1.8.6");
     </script>
 
+	 <script type="text/javascript" src="js/constants.js"></script>
 	 <script type="text/javascript" src="js/jscolor.js"></script>
      <script type="text/javascript">
     	var input_circles = false    </script>
@@ -52,6 +53,7 @@
 	 <input type="submit" value="Edit Circle" onclick="modifyActiveCircle();"/>
 	 <input type="submit" value="Remove Circle" onclick="deleteActiveCircle();"/>
 	 <input type="file" id="csvFile" />
+	  <input type="button" value="Go Fullscreen" onclick="goFullScreen();"/>
 	 <div id="info"></div>
 </div>
 	
