Added info box to indentify circle created

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 	 <script type="text/javascript" src="js/circle.js"></script>
 	 <script type="text/javascript" src="js/csv.js"></script>
+	 <script type="text/javascript" src="js/infobox.js"></script>
 
 
 </head>
