--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="css/fonts.css" media="all" rel="stylesheet" />
 	<script type="text/javascript" src="http://www.google.com/jsapi"></script>
 	<script type="text/javascript">
-	      google.load("maps", "3",{other_params:"sensor=false&libraries=geometry"});
+	      google.load("maps", "3",{other_params:"libraries=geometry"});
 	      google.load("jquery", "1.7");
 	      google.load("jqueryui", "1.8.6");
     </script>
@@ -95,9 +95,9 @@
 			<!-- <li>Only Show Border <input type="checkbox" id="only_border"></li> -->
 			<li><a class="icon-plus btn_style" value="New Circle" onclick="showAddress();"> </a> | <a class="icon-pencil2 btn_style" value="Edit Circle" onclick="modifyActiveCircle();"> </a> | <a class="icon-cross btn_style" value="Remove Circle" onclick="deleteActiveCircle();"> </a></li>
 			<li><input type="file" id="csvFile" /></li>
-			<li><label><input type="checkbox" id="THIRTY_TOGGLE" checked /> Show/Hide 30sec Locations</label></li>
-			<li><label><input type="checkbox" id="BG_TOGGLE" checked /> Show/Hide Background Locations</label></li>
-			<li><label><input type="checkbox" id="GEOFENCE_TOGGLE" checked /> Show/Hide Geofences</label></li>
+			<li><label><input type="checkbox" id="THIRTY_TOGGLE" /> Show/Hide 30sec Locations</label></li>
+			<li><label><input type="checkbox" id="BG_TOGGLE" /> Show/Hide Background Locations</label></li>
+			<li><label><input type="checkbox" id="GEOFENCE_TOGGLE" /> Show/Hide Geofences</label></li>
 			
 			<li>Total Geofence Breached:<span id="breaches"></span></li>
 			<li>Total Locations:<span id="locations"></span></li>
